--- a/CurrencyExchange_App/CurrencyExchange/package.json
+++ b/CurrencyExchange_App/CurrencyExchange/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.8.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-select": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
